sgt-37 fix for mobile on small and extra small

--- a/src/styles/__mobile.scss
+++ b/src/styles/__mobile.scss
@@ -923,6 +923,9 @@
     @media(max-width: 331px) {
       height: 924px;
     }
+    @media(max-width: 321px) {
+      height: 950px;
+    }
     @media(min-width: $screen-sm-min) {
       padding: 30px 20px;
       height: 1780px;
